syntax = "proto3";

package plan;

import "common.proto";

option java_multiple_files = true;
option java_package = "com.study.planservice.grpc";
option java_outer_classname = "PlanProto";

//Plan
message CreatePlanRequest {
  string userId = 1;
  string name = 2;
  string description = 3;
  string startAt = 4;
  string endAt = 5;
  repeated string remindAt = 6;
  string teamId = 7;
}

message PlanResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string startAt = 4;
  string endAt = 5;
  repeated string remindAt = 6;
}

message GetPlanByIdRequest {
  string id = 1;
}

message PlanDetailResponse {
  string id = 1;
  string creatorId = 2;
  string name = 3;
  string description = 4;
  string startAt = 5;
  string endAt = 6;
  repeated string remindAt = 7;
  float progress = 8;
  string completeAt = 9;
  string teamId = 10;
}

message GetAssignedPlansOnDateRequest {
  string userId = 1;
  string date = 2;
}

message PlanSummaryResponse {
  string id = 1;
  string name = 2;
  string endAt = 3;
  float progress = 4;
}

message PlansResponse {
  repeated PlanSummaryResponse plans = 1;
}

message GetTeamPlansOnDateRequest {
  string userId = 1;
  string teamId = 2;
  string date = 3;
}

message TeamPlanSummaryResponse {
  string id = 1;
  string name = 2;
  string endAt = 3;
  float progress = 4;
  bool isAssigned = 5;
}

message TeamPlansResponse {
  repeated TeamPlanSummaryResponse plans = 1;
}

message GetDatesWithDeadlineInMonthRequest {
  string userId = 1;
  int32 month = 2;
  int32 year = 3;
  string teamId = 4;
}

message DatesResponse {
  repeated string dates = 1;
}

message GetPersonalMissedPlansRequest {
  string userId = 1;
}

message GetTeamMissedPlansRequest {
  string userId = 1;
  string teamId = 2;
}

message UpdatePlanRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string startAt = 4;
  string endAt = 5;
  repeated string remindAt = 6;
}

message DeletePlanRequest {
  string id = 1;
}

message RestorePlanRequest {
  string id = 1;
  string endAt = 2;
}

//Task
message CreateTaskRequest {
  string assigneeId = 1;
  string name = 2;
}

message CreateTasksRequest {
  string planId = 1;
  repeated CreateTaskRequest tasks = 2;
}

message TaskResponse {
  string id = 1;
  string assigneeId = 2;
  string name = 3;
  bool isCompleted = 4;
}

message TasksResponse {
  repeated TaskResponse tasks = 1;
}

message GetAllTasksInPlanRequest {
  string planId = 1;
}

message UpdateTaskRequest {
  string taskId = 1;
  bool isCompleted = 2;
}

message UpdateTasksRequest {
  string userId = 1;
  string planId = 2;
  repeated UpdateTaskRequest requests = 3;
}

message DeleteTasksRequest {
  string planId = 1;
  repeated string taskIds = 2;
}

service PlanService {
  //Plan
  rpc CreatePlan(CreatePlanRequest) returns (PlanResponse);
  rpc GetPlanById(GetPlanByIdRequest) returns (PlanDetailResponse);
  rpc GetAssignedPlansOnDate(GetAssignedPlansOnDateRequest) returns (PlansResponse);
  rpc GetTeamPlansOnDate(GetTeamPlansOnDateRequest) returns (TeamPlansResponse);
  rpc GetDatesWithDeadlineInMonth(GetDatesWithDeadlineInMonthRequest) returns (DatesResponse);
  rpc GetPersonalMissedPlans(GetPersonalMissedPlansRequest) returns (PlansResponse);
  rpc GetTeamMissedPlans(GetTeamMissedPlansRequest) returns (TeamPlansResponse);
  rpc UpdatePlan(UpdatePlanRequest) returns (PlanResponse);
  rpc DeletePlan(DeletePlanRequest) returns (common.ActionResponse);
  rpc RestorePlan(RestorePlanRequest) returns (common.ActionResponse);

  //Task
  rpc CreateTasks(CreateTasksRequest) returns (common.ActionResponse);
  rpc GetAllTasksInPlan(GetAllTasksInPlanRequest) returns (TasksResponse);
  rpc UpdateTasks(UpdateTasksRequest) returns (common.ActionResponse);
  rpc DeleteTasks(DeleteTasksRequest) returns (common.ActionResponse);
}